test/scc/expr/semantic-errors/163.a
163.t:8:17: error: too many initializer values